--- a/codigo/public/assets/css/cadastrocs.css
+++ b/codigo/public/assets/css/cadastrocs.css
@@ -98,7 +98,7 @@ textarea {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #f39c12;
+    background-color: #rgba(34, 77, 122, 1);
     border: none;
     color: white;
     font-size: 16px;
