--- a/codigo/public/assets/css/cadastrocs.css
+++ b/codigo/public/assets/css/cadastrocs.css
@@ -1,64 +1,3 @@
-html, body {
-    height: 100%;
-    margin: 0;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgba(224, 224, 224, 1);
-    padding-top: 100px;
-    padding-bottom: 40px;
-    overflow-x: hidden;
-}
-
-.dark-theme {
-    background-color: black;
-    color: white;
-}
-
-.cabecalho {
-    background-color: rgba(34, 77, 122, 1);
-    padding: 0 20px;
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-    box-sizing: border-box;
-}
-.cabecalho .aparencia{
-    background-color:rgba(34, 77, 122, 1) ;
-}
-.cabecalho .aparencia,
-.cabecalho .config,
-.cabecalho .conta,
-.cabecalho .notificacao {
-    width: 40px; 
-    height: 40px; 
-    margin-left: 10px;
-}
-.aparencia .aparencia{
-    background-color:rgba(34, 77, 122, 1) ;
-}
-.cabecalho .logo {
-    width: 120px;
-    height: auto;
-}
-.dark-theme {
-    background-color: black;
-    color: white;
-}
-.cabecalho .icones {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-}
-
 .container {
     background-color: #fff;
     padding: 20px;
@@ -98,7 +37,7 @@ textarea {
 button {
     width: 100%;
     padding: 10px;
-    background-color: rgba(34, 77, 122, 1);
+    background-color: #FF9900;
     border: none;
     color: white;
     font-size: 16px;
@@ -107,5 +46,5 @@ button {
 }
 
 button:hover {
-    background-color: rgba(34, 77, 122, 1);
+    background-color: #FF9900;
 }
